--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -53,34 +53,10 @@
                         android:textSize="22sp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/userLayout"
+                <com.example.projekt_am_2023.AssigneeComponent
+                    android:id="@+id/assignee"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp">
-
-                    <ImageView
-                        android:id="@+id/userImage"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:contentDescription="@string/userImageDescription"
-                        android:padding="10dp"
-                        app:srcCompat="@drawable/user1"
-                        tools:ignore="ImageContrastCheck" />
-
-                    <TextView
-                        android:id="@+id/userText"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="start|center_vertical"
-                        android:hint="@string/userHint"
-                        android:textColor="?android:attr/colorForeground"
-                        android:textColorHint="?android:attr/textColorHint"
-                        android:textSize="22sp" />
-                </LinearLayout>
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/dateLabel"
