--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -59,6 +59,28 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/sectionLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/sectionLabel"
+                    android:textAlignment="center"
+                    android:textColor="?android:attr/colorForeground"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/sectionText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/sectionHint"
+                    android:textColor="?android:attr/colorForeground"
+                    android:textColorHint="?android:attr/textColorHint"
+                    android:textSize="20sp" />
+
+                <TextView
                     android:id="@+id/dateLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
