--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -53,7 +53,7 @@
                         android:textSize="22sp" />
                 </LinearLayout>
 
-                <com.example.projekt_am_2023.AssigneeComponent
+                <com.example.projekt_am_2023.UserComponent
                     android:id="@+id/assignee"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
