--- a/app/src/main/res/layout/dialog_section.xml
+++ b/app/src/main/res/layout/dialog_section.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".section.SectionListFragment">
+    tools:context=".section.SectionDialog">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
