--- a/app/src/main/res/layout/list_view_task.xml
+++ b/app/src/main/res/layout/list_view_task.xml
@@ -41,6 +41,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="30dp"
+        android:contentDescription="@string/assignee_avatar"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
