(misc) fix small problems (e.g. missing inputType, focusable attributes)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/new_icon"
         app:tint="?android:attr/colorBackground"
-        android:contentDescription="@string/fab_description" />
+        android:contentDescription="@string/fab_description"
+        android:focusable="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
