--- a/app/src/main/res/layout/fragment_section_view.xml
+++ b/app/src/main/res/layout/fragment_section_view.xml
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="@string/sectionNameHint"
+                    android:inputType="text"
                     android:textColor="?android:attr/colorForeground"
                     android:textColorHint="?android:attr/textColorHint"
                     android:textSize="20sp" />
