(WeekView) Fix task display. Added week changing.

--- a/app/src/main/res/layout/activity_calendar_week_view.xml
+++ b/app/src/main/res/layout/activity_calendar_week_view.xml
@@ -10,9 +10,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="?android:attr/colorForeground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/empty"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/prevWeek"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@+id/weekTaskTitle"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toEndOf="@+id/empty"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/folded_triangle_back" />
+
+    <ImageButton
+        android:id="@+id/nextWeek"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@+id/weekTaskTitle"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/folded_triangle" />
 
     <View
         android:id="@+id/empty"
