--- a/app/src/main/res/drawable/list_icon.xml
+++ b/app/src/main/res/drawable/list_icon.xml
@@ -4,42 +4,42 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
   <path
-      android:pathData="M103,5l-0,24.5l-98,0l-0,-24.5z"
+      android:pathData="M5,5h98v20h-98z"
       android:strokeLineJoin="round"
       android:strokeWidth="9.99996"
       android:fillColor="#00000000"
       android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M103,5l-0,24.5l-98,0l-0,-24.5z"
+      android:pathData="M5,5h98v20h-98z"
       android:strokeLineJoin="round"
       android:strokeWidth="9.99996"
       android:fillColor="#00000000"
       android:strokeColor="#00000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M103,78.5l-0,24.5l-98,0l-0,-24.5z"
+      android:pathData="M5,83h98v20h-98z"
       android:strokeLineJoin="round"
       android:strokeWidth="9.99996"
       android:fillColor="#00000000"
       android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M103,78.5l-0,24.5l-98,0l-0,-24.5z"
+      android:pathData="M5,83h98v20h-98z"
       android:strokeLineJoin="round"
       android:strokeWidth="9.99996"
       android:fillColor="#00000000"
       android:strokeColor="#00000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M103,41.75l-0,24.5l-98,0l-0,-24.5z"
+      android:pathData="M5,44h98v20h-98z"
       android:strokeLineJoin="round"
       android:strokeWidth="9.99996"
       android:fillColor="#00000000"
       android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M103,41.75l-0,24.5l-98,0l-0,-24.5z"
+      android:pathData="M5,44h98v20h-98z"
       android:strokeLineJoin="round"
       android:strokeWidth="9.99996"
       android:fillColor="#00000000"
