--- a/app/src/main/res/layout/board_view_task.xml
+++ b/app/src/main/res/layout/board_view_task.xml
@@ -36,7 +36,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/doneCheckBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/doneCheckBox"
-        app:srcCompat="@drawable/user1" />
+        app:srcCompat="@drawable/circle" />
 
     <TextView
         android:id="@+id/dateText"
