--- a/app/src/main/res/layout-land/activity_calendar_week_view.xml
+++ b/app/src/main/res/layout-land/activity_calendar_week_view.xml
@@ -64,8 +64,8 @@
 
     <LinearLayout
         android:id="@+id/days"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
